--- a/CSS/index.css
+++ b/CSS/index.css
@@ -7,12 +7,16 @@ section {
     overflow: hidden;
     position: relative;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .video-container video {
-    position: absolute;
     z-index: -1;
     opacity: 0.4;
+    width: 95%;
+    height: 95%;
 }
 
 h1 {
@@ -31,27 +35,58 @@ h1 {
 
 .s2 {
     height: 900px;
-    background-image: url(/IMAGES/bg1compressed.png);
-    background-size: contain;
-    
+    display: flex;
+    justify-content: center;
 }
-.s2 div {
+.s2 .s2container {
     display: flex;
     flex-wrap: nowrap;
-    height: 100%;
+    height: 90%;
+    width: 90%;
+    background-image: url(/IMAGES/bg1compressed.png);
+    background-size: contain;
 }
-.s2 div h1 {
+.s2 h1 {
     font-size: 80px;
     width: 470px;
     align-self: center;
     padding-inline: 100px;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); 
 }
 .s2 div img {
     height: 65%;
     align-self: center;
     justify-self: center;
+    width: 100%;
+}
+.s2 .orderButtons {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row-reverse;
+    column-gap: 20px;
 }
 
+.s2 a {
+    all: unset;
+    padding: 20px;
+    padding-inline: 60px;
+    background-color: #695450;
+    color: white;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 20px;
+}
+.s2 .orderButtons:last-child {
+    padding-inline-end: 100px;
+}
+.s2 .a2d {
+    font-weight: 500;
+    background-color: transparent;
+    color: #695450;
+    border: 3px solid #695450;
+}
 .s3 {
     height: 1000px;
 }
@@ -94,4 +129,22 @@ h1 {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+}
+.backgroundBlur {
+    position: relative;
+    overflow: hidden; /* Ensures the pseudo-element doesn't overflow */
+}
+
+.backgroundBlur::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url(/IMAGES/bgblurfixed.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: blur(5px);
+    z-index: -1; /* Ensures the blur stays behind the content */
 }
