--- a/CSS/headerfooter.css
+++ b/CSS/headerfooter.css
@@ -22,7 +22,7 @@ header {
     margin-top: -20px;
     width: 100%;
     height: 10%;
-    background-image: url(/IMAGES/Picture5.png);
+    background-image: url("CSSBG/header_element.png");
     background-repeat: repeat-x;
     background-size: 800px;
 }
