--- a/CSS/index.css
+++ b/CSS/index.css
@@ -43,7 +43,7 @@ h1 {
     flex-wrap: nowrap;
     height: 90%;
     width: 90%;
-    background-image: url("../IMAGES/bg1compressed.png");
+    background-image: url("CSSBG/bg1compressed.png");
     background-size: contain;
 }
 .s2 h1 {
@@ -142,9 +142,9 @@ h1 {
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url("../IMAGES/bgblurfixed.png");
+    background-image: url("CSSBG/bgblurfixed.png");
     background-repeat: no-repeat;
     background-size: cover;
-    filter: blur(5px);
+    filter: blur(10px);
     z-index: -1; /* Ensures the blur stays behind the content */
 }
