--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,6 +1,6 @@
 
 section {
-    height: 800px;
+    height: 80vh;
     position: relative;
 }
 .video-container {
@@ -25,6 +25,7 @@ h1 {
     color: #695450;
     margin: 0;
 }
+
 .welcome {
     text-align: center;
     position: absolute;
@@ -34,9 +35,10 @@ h1 {
 }
 
 .s2 {
-    height: 900px;
+    position: relative;
     display: flex;
     justify-content: center;
+    margin-top: 50px;
 }
 .s2 .s2container {
     display: flex;
@@ -47,45 +49,64 @@ h1 {
     background-size: contain;
 }
 .s2 h1 {
-    font-size: 80px;
-    width: 470px;
+    font-size: 7vh;
     align-self: center;
-    padding-inline: 100px;
+    text-align: justify;
+    word-spacing: 5px;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); 
+    padding-inline-start: 30px;
+}
+.s2subcontainer {
+    display: grid;
+    grid-template-rows: 80% 20%;
+}
+.s2 .hopiaimgcontainer {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    overflow: hidden;
 }
 .s2 div img {
     height: 65%;
-    align-self: center;
-    justify-self: center;
-    width: 100%;
+    max-width: 100%;
+    height: auto;
 }
 .s2 .orderButtons {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row-reverse;
     column-gap: 20px;
+    
 }
-
+.s2 ul {
+    display: flex;
+    column-gap: 20px;
+    margin-inline-end: 50px;
+    
+}
+.s2 li {
+    padding-inline: 20px;
+    padding-block: 16px;
+    margin: auto;
+    list-style-type: none;
+    box-sizing: border-box;
+    border: 2px solid black;
+}
+.s2 li :hover {
+    opacity: 0.5;
+}
 .s2 a {
+    margin: auto;
     all: unset;
-    padding: 20px;
-    padding-inline: 60px;
+    font-weight: 700;
+}
+.s2 ul :first-child {
     background-color: #695450;
-    color: white;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-size: 20px;
+    border: none;
 }
-.s2 .orderButtons:last-child {
-    padding-inline-end: 100px;
-}
-.s2 .a2d {
-    font-weight: 500;
+.s2 ul :last-child {
+    
     background-color: transparent;
-    color: #695450;
-    border: 3px solid #695450;
 }
 .s3 {
     height: 1000px;
