--- a/CSS/index.css
+++ b/CSS/index.css
@@ -15,8 +15,8 @@ section {
 .video-container video {
     z-index: -1;
     opacity: 0.4;
-    width: 95%;
-    height: 95%;
+    width: 100%;
+
 }
 
 h1 {
@@ -34,6 +34,116 @@ h1 {
     transform: translate(-50%, -50%);
 }
 
+.s1 .orderButtons {
+    position: absolute;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row-reverse;
+    column-gap: 20px;
+    top: 80%;
+}
+.s1 .orderButtons img {
+    height: 30px;
+}
+.s1 ul {
+    display: flex;
+    column-gap: 20px;
+    margin-inline-end: 40px;
+}
+.s1 li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-inline: 20px;
+    padding-block: 16px;
+    list-style-type: none;
+    box-sizing: border-box;
+    border: 2px solid #695450;
+    overflow: hidden;
+    column-gap: 15px;
+}
+.s1 li :hover {
+    opacity: 0.5;
+}
+.s1 a {
+    display: flex;
+    align-items: center;
+    justify-content: center; /* Ensures text is fully centered */
+    text-decoration: none; /* Removes underline */
+    width: 100%; /* Ensures it takes up the whole space */
+    height: 100%;
+    color: #695450;
+    font-weight: 700;
+}
+.s1 ul :first-child {
+    background-color: #695450;
+    border: none;
+}
+.s1 ul :last-child {
+    background-color: transparent;
+}
+
+.subSection {
+    height: 300px;
+}
+.subSection p {
+    padding-inline: 10%;
+}
+.subSection h2 {
+    font-size: 40px;
+}
+.subSection h2, p {
+    text-align: center;
+}
+.subSection .orderButtons {
+    position: absolute;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row-reverse;
+    column-gap: 20px;
+    left: 50%;
+    transform: translate(-50%);
+}
+.subSection .orderButtons img {
+    height: 30px;
+}
+.subSection ul {
+    display: flex;
+    column-gap: 20px;
+    margin-inline-end: 40px;
+}
+.subSection li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-inline: 20px;
+    padding-block: 16px;
+    list-style-type: none;
+    box-sizing: border-box;
+    border: 2px solid #695450;
+    overflow: hidden;
+    column-gap: 15px;
+}
+.subSection li :hover {
+    opacity: 0.5;
+}
+.subSection a {
+    display: flex;
+    align-items: center;
+    justify-content: center; /* Ensures text is fully centered */
+    text-decoration: none; /* Removes underline */
+    width: 100%; /* Ensures it takes up the whole space */
+    height: 100%;
+    color: #695450;
+    font-weight: 700;
+}
+.subSection ul :first-child {
+    background-color: #695450;
+    border: none;
+}
+.subSection ul :last-child {
+    background-color: transparent;
+}
 .s2 {
     position: relative;
     display: flex;
@@ -71,43 +181,8 @@ h1 {
     max-width: 100%;
     height: auto;
 }
-.s2 .orderButtons {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row-reverse;
-    column-gap: 20px;
-    
-}
-.s2 ul {
-    display: flex;
-    column-gap: 20px;
-    margin-inline-end: 50px;
-    
-}
-.s2 li {
-    padding-inline: 20px;
-    padding-block: 16px;
-    margin: auto;
-    list-style-type: none;
-    box-sizing: border-box;
-    border: 2px solid black;
-}
-.s2 li :hover {
-    opacity: 0.5;
-}
-.s2 a {
-    margin: auto;
-    all: unset;
-    font-weight: 700;
-}
-.s2 ul :first-child {
-    background-color: #695450;
-    border: none;
-}
-.s2 ul :last-child {
-    
-    background-color: transparent;
-}
+
+
 .s3 {
     height: 1000px;
 }
@@ -145,15 +220,15 @@ h1 {
 }
 
 .s3 div video {
-    height: 85%;
+    width: 80%;
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
 }
-.backgroundBlur {
+/* .backgroundBlur {
     position: relative;
-    overflow: hidden; /* Ensures the pseudo-element doesn't overflow */
+    overflow: hidden;
 }
 
 .backgroundBlur::before {
@@ -167,5 +242,5 @@ h1 {
     background-repeat: no-repeat;
     background-size: cover;
     filter: blur(10px);
-    z-index: -1; /* Ensures the blur stays behind the content */
-}
+    z-index: -1; 
+} */
