--- a/CSS/headerfooter.css
+++ b/CSS/headerfooter.css
@@ -188,6 +188,9 @@ header {
     padding: 20px;
     transition: height 0.3s ease; /* Smooth transition for height */
 }
+.menuContentscol1 p {
+    text-align: left;
+}
 .menuContentscol1 li {
     text-decoration: none;
     list-style: none;
