--- a/CSS/headerfooter.css
+++ b/CSS/headerfooter.css
@@ -9,7 +9,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #f5f5df;
+    background: linear-gradient(to bottom, #f5f5dc, #d6b18a);
 }
 body.active {
     position: fixed;
@@ -86,7 +86,7 @@ header {
     position: fixed;
     top: -100%;
     left: 0;
-    width: 100%;
+    width: 100vw;
     height: 100%;
     background-color: #fff5d6;
     transition: top 0.5s ease-in-out;
@@ -103,6 +103,8 @@ header {
     display: flex;
     justify-content: flex-end;
     flex-direction: column;
+    
+    background: linear-gradient(45deg, #f5f5dc, #d6b18a);
 }
 
 .aboutContents {
@@ -140,6 +142,7 @@ header {
 .dropdownmvcore p {
     text-align: left;
     font-weight: 700;
+    text-align: justify
 }
 .dropdownmvcorecontent p {
     font-weight: 400;
@@ -219,7 +222,7 @@ header {
 }
 .corevaluesContainer p {
     padding: 20px;
-    font-size: 25px;
+    font-size: 1vw;
     margin-top: 0;
     z-index: 2;
 }
@@ -242,26 +245,12 @@ header {
 
 
 
-.hopiaItemContainer {
-    margin-block-start: 50px;
-    background-color: green;
-    background-image: url("CSSBG/bg1compressedhopia.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    margin-inline-start: 40px;
-    height: 55%;
-    width: 35%;
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-}
-
-
 .menu {
     overflow: scroll;
-    margin-top: 100px;
     height: 800px;
     flex-direction: column;
     justify-content: flex-end;
+    background: linear-gradient(135deg, #f5f5dc, #d6b18a);
 }
 .menuContents {
     position: fixed;
@@ -320,20 +309,19 @@ header {
 
 .menuContentscol2 {
     background-color: red;
-    width: 100%;
     height: 100%;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 300px);
+    gap: 20px;
+    padding: 20px;
+    justify-content: center;
 }
 .hopiaItemContainer {
-    margin-block-start: 50px;
     background-color: green;
-    margin-inline-start: 40px;
-    height: 55%;
-    width: 35%;
     display: grid;
     grid-template-rows: 1fr 1fr;
     border-radius: 15px;
-
+    
 }
 .hopiaImgContainer {
     background-color: blue;
@@ -356,7 +344,6 @@ header {
 .about, .menu {
     opacity: 0;
     visibility: hidden;
-    transform: translateY(20px);
     transition: opacity 0.5s ease, transform 0.5s ease, visibility 0s linear 0.5s;
 }
 
@@ -369,7 +356,6 @@ header {
 .menu {
     opacity: 0;
     visibility: hidden;
-    transform: translateY(20px);
     transition: opacity 0.5s ease, transform 0.5s ease, visibility 0s linear 0.5s;
 }
 
@@ -378,4 +364,93 @@ header {
     visibility: visible;
     transform: translateY(0);
     transition: opacity 0.5s ease, transform 0.5s ease, visibility 0s linear;
+}
+
+.headerpagecontents {
+    width: 100%;
+    height: 100%;
+    padding-top: 200px;
+    background: linear-gradient(135deg, #f5f5dc, #d6b18a);
+}
+#contactsContainer {
+    background: linear-gradient(135deg, #f5f5dc, #d6b18a);
+    justify-content: space-evenly;
+    column-gap: 30px;
+}
+.contact-container {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 100px;
+}
+.contact-left {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 20px;
+}
+.contact-left-title h2 {
+    margin-top: 0;
+    font-weight: 600;
+    font-size: 40px;
+    margin-bottom: 5px;
+}
+.contact-left-title hr {
+    border: none;
+    width: 120px;
+    height: 5px;
+    background-color: black;
+    border-radius: 10px;
+    margin-left: 0;
+    margin-bottom: 20px;
+}
+.contact-inputs {
+    width: 400px;
+    height: 50px;
+    border: none;
+    outline: none;
+    padding-left: 25px;
+    font-weight: 500;
+    border-radius: 50px;
+}
+.contact-left textarea {
+    height: 140px;
+    padding-top: 15px;
+    border-radius: 20px;
+}
+.contact-right {
+    display: flex;
+    flex-direction: column;
+}
+.contact-right div{
+    display: flex;
+    column-gap: 20px;
+    align-items: center;
+    padding: 20px;
+    padding-block: 40px;
+    border-bottom: 1px solid black;
+}
+.contact-right a {
+    all: unset;
+    cursor: pointer;
+}
+.contact-right :last-child {
+    border: none;
+}
+.contact-right div img {
+    height: 30px;
+}
+
+
+
+.contact-inputs:focus {
+    border: 2px solid burlywood;
+}
+.contact-inputs::placeholder {
+    color: gray;
+}
+.contact-left button {
+    border-radius: 50px;
+    font-size: 16px;
+    padding: 15px 30px;
+    background: linear-gradient(135deg, #f5f5dc, #d6b18a);
 }
