--- a/CSS/headerfooter.css
+++ b/CSS/headerfooter.css
@@ -5,10 +5,15 @@
     scroll-behavior: smooth;
     scrollbar-width: none;
     box-sizing: border-box;
+    
+}
+html {
+    overflow-x: hidden;
 }
 body {
     margin: 0;
     padding: 0;
+    width: 100vw;
     background: linear-gradient(to bottom, #f5f5dc, #d6b18a);
 }
 body.active {
@@ -37,8 +42,8 @@ header {
     background-size: contain;
     bottom: 50px;
 }
-.headerElementimgcontainer {
-    
+.navBarmobile {
+    display: none;
 }
 .navBar {
     position: absolute;
@@ -81,6 +86,42 @@ header {
     height: 150px;
     filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.3));
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .headerPage {
     position: fixed;
@@ -157,80 +198,44 @@ header {
 
 .aboutContentscol2 {
     width: 100%;
-}
-
-
-
-
-.missionvisionTab {
+    height: 97%;
+    background-color: #f0e2c9;
+    background-image: 
+        linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)), 
+        url(CSSBG/logo.png);
+    background-repeat: no-repeat, no-repeat;
+    background-position: center, center;
+    background-size: cover, 50%;
     display: flex;
-    flex-direction: row;
-    column-gap: 20px;
-    padding: 20px;
-    height: 80%;
+    align-items: flex-end;
 }
-.missionvisionTab div {
-    background-color: #aa8356;
-    flex: 1;
-    border-radius: 20px;
+.aboutContentscol2content {
+    color: white;
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
-.missionvisionTab p {
-    text-align: center ;
-    font-size: 23px;
-}
-.missionvisionTab h2 {
-    padding: 0;
-    padding-block: 30px;
-    text-align: center;
-}
-.missionvisionTab img {
-    width: 50px;
-}
-
-
-
-
-.scrollCore {
-    height: 100%;
-    padding-right: 60px;
-    overflow: scroll;
-}
-.corevaluesTab {
-    display: grid;
-    padding: 20px;
-    height: 180%;
-    grid-template-columns: repeat(3, 1fr); /* 3 items per row */
-    gap: 10px;
-    overflow: scroll;
-}
-.corevaluesContainer {
-    position: relative;
-}
-.corevaluesContainer img {
-    height: auto;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    z-index: -1;
-}
-
-.corevaluesContainer h2 {
+.aboutContentscol2content h2 {
+    margin: 0;
     padding: 0;
     text-align: center;
-    padding-top: 15px;
-    z-index: 2;
 }
-.corevaluesContainer p {
-    padding: 20px;
-    font-size: 1vw;
-    margin-top: 0;
-    z-index: 2;
+.aboutContentscol2content p {
+    padding-inline: 50px;
+    text-align: center;
 }
-.missionvisionTab, .scrollCore {
-    transition: opacity 0.5s ease-in-out;
+.aboutContentscol2content a {
+    all: unset;
 }
-
-
+.aboutContentscol2content a p {
+    padding: 15px;
+    padding-inline: 20px;
+    border: 2px solid white;
+    width: fit-content;
+    cursor: pointer;
+}
 
 
 
@@ -454,3 +459,12 @@ header {
     padding: 15px 30px;
     background: linear-gradient(135deg, #f5f5dc, #d6b18a);
 }
+
+
+
+
+
+
+
+
+
