--- a/CSS/index.css
+++ b/CSS/index.css
@@ -16,7 +16,7 @@ section {
     z-index: -1;
     opacity: 0.4;
     width: 100%;
-
+    position: absolute;
 }
 
 h1 {
@@ -28,10 +28,7 @@ h1 {
 
 .welcome {
     text-align: center;
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 100%;
 }
 
 .s1 .orderButtons {
@@ -85,7 +82,6 @@ h1 {
 
 .subSection {
     height: auto;
-    max-height: 500px;
     width: auto;
     display: flex;
     flex-direction: column;
