--- a/CSS/about.css
+++ b/CSS/about.css
@@ -6,6 +6,11 @@ article {
     display: grid;
     grid-template-columns: 1fr 100px 1fr;
 }
+.logo {
+    width: 100%;
+    height: auto;
+    visibility: hidden;
+}
 .missiontab, .visiontab {
     display: flex;
     justify-content: center;
@@ -14,6 +19,12 @@ article {
 .rollingPin {
     display: flex;
     justify-content: center;
+}
+.rollimg {
+    width: 100px;
+}
+.rollimgbaliktad {
+    display: none;
 }
 .content {
     background-color: #aa8356;
@@ -29,10 +40,6 @@ article {
     font-size: 50px;
     font-weight: 700;
 }
-.visiontab {
-    background-color: red;
-}
-
 .a2 {
     height: auto;
     padding-bottom: 50px;
@@ -45,8 +52,8 @@ article {
 }
 .coreValuesmainContainer {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-    max-width: 100%; /* Ensures at most 3 columns (3 * 300px max) */
+    grid-template-columns: repeat(auto-fit, minmax(425px, 1fr));
+    max-width: 80%; /* Ensures at most 3 columns (3 * 300px max) */
     margin: auto; /* Centers the container */
     row-gap: 130px;
 }
@@ -88,4 +95,49 @@ article {
     height: 40px;
     background-size: cover;
     background-image: url(CSSBG/hopiaproductelement.png);
+}
+@media only screen and (max-width: 600px) {
+    body {
+        overflow-x: hidden;
+    }
+    html {
+        overflow-x: hidden;
+    }
+    .rollingPin {
+        position: relative;
+        width: 100%;
+    }
+    header {
+        margin-bottom: 100px;
+    }
+    .a1 {
+        height: auto;
+        width: 100vw;
+        max-width: 100vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        row-gap: 20px;
+        padding-inline: 20px;
+    }
+    .rollimg {
+        display: none;
+    }
+    .rollimgbaliktad {
+        display: block;
+        width: 100%;
+    }
+    .content {
+        width: 100%;
+        min-height: 500px;
+        height: auto;
+    }
+    .mv {
+        width: 100%;
+    }
+    .coreValuesmainContainer {
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0;
+    }
 }
