--- a/CSS/index.css
+++ b/CSS/index.css
@@ -15,7 +15,7 @@ section {
 .video-container video {
     z-index: -1;
     opacity: 0.4;
-    width: 100%;
+    height: 100%;
     position: absolute;
 }
 
@@ -28,11 +28,10 @@ h1 {
 
 .welcome {
     text-align: center;
-    width: 100%;
+    font-size: 6vw;
 }
 
 .s1 .orderButtons {
-    position: absolute;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row-reverse;
