--- a/CSS/mediaresponsiveness.css
+++ b/CSS/mediaresponsiveness.css
@@ -3,10 +3,57 @@
         overflow-x: hidden;
     }
     body {
-      overflow-x: hidden;
+        overflow-x: hidden;
+        display: flex;
+        flex-direction: column;
+    }
+    .navlogo {
+        display: none;
+    }
+    #navbar {
+        display: block;
+    }
+    nav {
+        position: fixed;
+        top: 0;
+        right: -100%;
+        height: 100vh;
+        width: min(15em, 100%);
+        z-index: 10;
+        transition: right 300ms ease-out;
+        background-color: #f3f1d7;
+    }
+    nav.show {
+        right: 0;
+    }
+    nav.show ~ #overlay {
+        display: block;
     }
     .navBar {
-        display: none;
+        margin-top: 100px;
+        flex-direction: column;
+        width: 100%;
+        justify-content: start;
+        align-items: start;
+    }
+    #navbar button {
+        all: unset;
+        display: flex;
+        
+    }
+    .navBar li {
+        margin: 0;
+        text-align: left;
+    }
+    .navButtons {
+        width: 100%;
+    
+        padding-left: 20px;
+    }
+    
+    
+    .logo {
+        visibility: visible;
     }
     .navBarmobile {
         padding: 0;
@@ -22,4 +69,55 @@
         align-items: center;
         list-style-type: none;
     }
+    .header_element {
+        display: none;
+    }
+    .welcome {
+        font-size: 9vw;
+    }
+    .s1 {
+        height: auto;
+    }
+    .video-container {
+        display: flex;
+        flex-direction: column;
+    }
+    .s1 .orderButtons a {
+        font-size: 12px;
+    }
+    .s2 {
+        height: 300px;
+    }
+    .s2 h1 {
+        font-size: 24px;
+    }
+    .s3 {
+        height: 300px;
+    }
+    .frame img {
+        height: 100px;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   }
