--- a/CSS/mediaresponsiveness.css
+++ b/CSS/mediaresponsiveness.css
@@ -59,12 +59,13 @@
         padding: 0;
         margin: 0;
         display: flex;
-        justify-content: space-around;
+        justify-content: start;
         width: 100vw;
     }
     .navBarmobile li {
         font-weight: 700;
         display: flex;
+        flex: 1;
         justify-content: center;
         align-items: center;
         list-style-type: none;
