--- a/CSS/index.css
+++ b/CSS/index.css
@@ -15,7 +15,7 @@ section {
 .video-container video {
     z-index: -1;
     opacity: 0.4;
-    height: 100%;
+    width: 100%;
     position: absolute;
 }
 
