--- a/CSS/index.css
+++ b/CSS/index.css
@@ -7,9 +7,11 @@ section {
     overflow: hidden;
     position: relative;
     height: 100%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 .video-container video {
@@ -28,25 +30,34 @@ h1 {
 
 .welcome {
     text-align: center;
-    font-size: 6vw;
+    font-size: clamp(2rem, calc(6vw + 1rem), 5rem);
+    width: 100%;
 }
-
+.s1 {
+    display: flex;
+    align-items: start;
+    justify-content: flex-start;
+    animation: transitionIn 0.75s;
+}
 .s1 .orderButtons {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row-reverse;
-    column-gap: 20px;
+    width: 100%;
     top: 80%;
 }
 .s1 .orderButtons img {
     height: 30px;
 }
 .s1 ul {
+    padding: 0;
     display: flex;
-    column-gap: 20px;
-    margin-inline-end: 40px;
+    justify-content: space-around;
+    width: 100%;
+
 }
 .s1 li {
+    flex-shrink: 1;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -247,7 +258,7 @@ h1 {
     z-index: -1; 
 } */
 
-section {
+.s {
     scale: .8; opacity: 0.7;
     animation: fade-in linear forwards;
     animation-timeline: view();
@@ -256,4 +267,14 @@ section {
 @keyframes fade-in {
 
     to {scale: 1; opacity: 1;}
+}
+@keyframes transitionIn {
+    from {
+        opacity: 0;
+        transform: rotate(-10deg);
+    }
+    to {
+        opacity: 1;
+        transform: rotate(0deg);
+    }
 }
