--- a/CSS/index.css
+++ b/CSS/index.css
@@ -159,20 +159,22 @@ h1 {
 }
 .s2 {
     position: relative;
-    display: flex;
+    display: none;
     justify-content: center;
     margin-top: 50px;
 }
 .s2 .s2container {
     display: flex;
     flex-wrap: nowrap;
-    height: 90%;
-    width: 90%;
-    background-image: url("CSSBG/bg1compressed.png");
+    height: 100%;
+    width: 1130px;
+    background-image: url("CSSBG/checkered.png");
     background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 .s2 h1 {
-    font-size: 7vh;
+    font-size: clamp(2rem, 2.5vw, 3rem); 
     align-self: center;
     text-align: justify;
     word-spacing: 5px;
@@ -197,6 +199,8 @@ h1 {
 
 
 .s3 {
+
+    margin-top: 20px;
     height: 1000px;
 }
 .s3 div {
@@ -277,4 +281,76 @@ h1 {
         opacity: 1;
         transform: rotate(0deg);
     }
+}
+.container {
+    scale: .8; opacity: 0.7;
+    animation: fade-in linear forwards;
+    animation-timeline: view();
+    animation-range: entry;
+	padding: 2rem;
+    height: auto;
+}
+
+.slider-wrapper {
+	position: relative;
+	width: 70%;
+	margin: 0 auto;
+}
+
+.slider {
+    
+	display: flex;
+	aspect-ratio: 16 / 9;
+	overflow-x: auto;
+    overflow-y: show;
+	scroll-snap-type: x mandatory;
+	scroll-behavior: smooth;
+	border-radius: 0.5rem;
+	-ms-overflow-style: none; /* Hide scrollbar IE and Edge */
+	scrollbar-width: none; /* Hide scrollbar Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.slider::-webkit-scrollbar {
+	display: none;
+}
+
+.slider > div {
+	flex: 1 0 100%;
+	min-width: 100%;
+	scroll-snap-align: start;
+    scroll-margin-top: 10rem; /* Or however tall your header/nav is */
+}
+
+.slider img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.slider-nav {
+	display: flex;
+	column-gap: 1rem;
+	position: absolute;
+	bottom: 1.25rem;
+	left: 50%;
+	transform: translateX(-50%);
+	z-index: 1;
+}
+
+.slider-nav a {
+	width: 0.5rem;
+	height: 0.5rem;
+	border-radius: 50%;
+	background-color: #fff;
+	opacity: 0.75;
+	transition: opacity ease 250ms;
+}
+
+.slider-nav a:hover {
+	opacity: 1;
+}
+#slide-2 {
+    background-color: red;
+
 }
