--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -18,12 +18,9 @@ header {
     visibility: hidden;
 }
 .a1 {
-    background-image: url(CSSBG/droop.png);
+    position: relative;
     background-repeat: repeat-x;
     background-size: contain;
-    animation: a1anim linear forwards;
-    animation-timeline: view();
-    animation-range: exit -200px;
     transform-origin: center;
     will-change: transform; /* Optimizes performance */
 }
@@ -32,16 +29,33 @@ header {
     margin-top: 40px;
     font-weight: 700;
     font-size: 5vw;
-    margin: 0;
+
     padding-top: 100px;
     animation: fadeout linear forwards;
     animation-timeline: view();
     animation-range: exit -200px;
+    z-index: 2;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    transform-origin: center;
+}
+.ooze_container {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-image: url(CSSBG/droop.png);
+    background-size: contain;
+    transform-origin: center;
+    top: 0;
+    z-index: 1;
+    animation: a1anim linear forwards;
+    animation-timeline: view();
+    animation-range: exit;
 }
 .a2 {
     margin-top: 50px;
     height: auto;
-    background-color: red;
 }
 .hopiacontainer {
     width: 100%;
@@ -67,7 +81,8 @@ header {
     animation: slideInFromRight 0.8s ease-out forwards;
     animation-timeline: view();
     animation-range: entry;
-    
+    border-radius: 20px;
+    position: relative;
 }
 
 .hopiacard p {
@@ -79,6 +94,13 @@ header {
     width: 300px;
     z-index: 10;
 }
+.bottomElement {
+    position: absolute;
+    bottom: 0;
+    margin-bottom: -20px;
+    width: 100%;
+    height: 30px;
+}
 .title {
     z-index: 9;
     position: absolute;
@@ -86,13 +108,18 @@ header {
     mix-blend-mode: multiply;
     animation: silly 0.5s ease-out forwards;
     animation-timeline: view();
-    animation-range: cover;
+    animation-range: contain;
+    background-color: white;
 }
 @keyframes fadeout {
-    to {opacity: 0;}
+    to {
+        opacity: 0;
+        transform: translate(-50%) scale(1.5);
+    }
 }
+
 @keyframes a1anim {
-    45%, 100% {scale: 2;}
+    60%, 100% {transform: translateY(300px); scale: 1.5;}
 }
 @keyframes slideInFromRight {
     0% {
@@ -120,7 +147,7 @@ header {
         transform: translateY(200px);
         opacity: 0;
     }
-    100% {
+    50% {
         transform: translateY(0);
         opacity: 1;
     }
