--- a/CSS/index.css
+++ b/CSS/index.css
@@ -42,7 +42,6 @@ h1 {
 .s1 .orderButtons {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row-reverse;
     width: 100%;
     top: 80%;
 }
@@ -52,9 +51,9 @@ h1 {
 .s1 ul {
     padding: 0;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     width: 100%;
-
+    gap: 50px;
 }
 .s1 li {
     flex-shrink: 1;
