--- a/CSS/about.css
+++ b/CSS/about.css
@@ -33,14 +33,22 @@ article {
     height: 70%;
     width: 500px;
     border-radius: 20px;
+    padding: 10px;
 }
 .content p {
-    text-align: center;
+    margin: 0;
+    font-size: 23px;
 }
 .content h2 {
     text-align: center;
+    
+    margin: 0;
+    margin-block-start: 10px;
     font-size: 50px;
     font-weight: 700;
+}
+.visionContent p {
+    font-size: 27.5px;
 }
 .a2 {
     height: auto;
@@ -58,8 +66,11 @@ article {
     max-width: 80%; /* Ensures at most 3 columns (3 * 300px max) */
     margin: auto; /* Centers the container */
     row-gap: 130px;
+    position: relative;
 }
-
+.below {
+    margin-top: 160px;
+}
 
 .corevalues {
     background-image: url("CSSBG/pan.png");
@@ -67,7 +78,6 @@ article {
     background-repeat: no-repeat;
     background-position: center;
     height: 600px;
-    position: relative;
     filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.5));
     display: flex;
     justify-content: center;
@@ -80,14 +90,21 @@ article {
     text-align: center;
     font-size: 20px;
 }
+.headerfoot {
+    position: absolute;
+    z-index: 2;
+    height: 100%;
+    width: 150%;
+    margin-left: -20%;
+}
 .corevaluesheader {
     
     position: absolute;
     top: -60px;
     width: 100%;
     height: 40px;
-    background-size: cover;
-    background-image: url(CSSBG/hopiaproductelement.png);
+    background-size: contain;
+    background-image: url(CSSBG/hopiaproductelement\ -\ Copy.png);
     transform: scaleY(-1);
 }
 .corevaluesfooter {
@@ -95,8 +112,8 @@ article {
     bottom: -60px;
     width: 100%;
     height: 40px;
-    background-size: cover;
-    background-image: url(CSSBG/hopiaproductelement.png);
+    background-size: contain;
+    background-image: url(CSSBG/hopiaproductelement\ -\ Copy.png);
 }
 .h2p {
     width: 250px;
