--- a/CSS/contacts.css
+++ b/CSS/contacts.css
@@ -1,8 +1,11 @@
-
+body {
+    overflow: hidden;
+    background-image: url(CSSBG/dyftif.png);
+    background-size: contain;
+}
 #contactsContainer {
-    
-    animation: transitionInonly 0.75s;
     background: none;
+    animation: transitionInonly 0.75s;
     justify-content: space-evenly;
     column-gap: 30px;
 }
@@ -88,4 +91,53 @@
     font-size: 16px;
     padding: 15px 30px;
     background: linear-gradient(135deg, #f5f5dc, #d6b18a);
+}
+
+.a1 {
+    height: 90vh;
+    width: 100vw;
+}
+
+.backdrop-content {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.backdrop-content h1 {
+    margin: 0;
+    font-weight: 700;
+    font-size: 50px;
+}
+.backdrop {
+    left: 50%;
+    transform: translateX(-50%);
+    position: absolute;
+    height: 100%;
+    z-index: 0;
+}
+.grid {
+    display: grid;
+    height: 50%;
+    width: 60%;
+    grid-template-columns: 50% 50%;
+    position: relative;
+    z-index: 2;
+}
+.grid div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.grid p {
+    text-align: center;
+    font-size: 27px;
+    font-weight: 600;
+}
+.grid img {
+    height: 400px;
 }
